<resources>
    <string name="app_name">TAXGO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pay_now">Pay Now</string>
    <string name="select_month">Select Month</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="name">Name</string>
    <string name="select_year">Select Year</string>
    <string name="select_type">Select Type</string>
    <string name="select_your_payment_method">Select Your Payment Method</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="_0">0</string>
    <string name="amount">Amount*:</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>