<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_payment_method"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline1" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:padding="5dp"
        android:rowCount="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.02">

        <!-- 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_debit_card"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <!-- 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/easypaisa_app_logo_vector"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <!-- 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_gpay"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_type_TextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/select_type"
        android:textColorHint="@color/grey_100"
        app:boxStrokeColor="#3ab54a"
        app:endIconTint="@color/black"
        app:hintTextColor="#3ab54a"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <AutoCompleteTextView
            android:id="@+id/select_type_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor,TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/year_TextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/select_year"
        android:textColorHint="@color/grey_100"
        app:boxStrokeColor="#3ab54a"
        app:endIconTint="@color/black"
        app:hintTextColor="#3ab54a"
        app:layout_constraintStart_toStartOf="@+id/select_type_TextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/select_type_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/year_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor,TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/month_TextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/select_month"
        android:textColorHint="@color/grey_100"
        app:boxStrokeColor="#3ab54a"
        app:endIconTint="@color/black"
        app:hintTextColor="#3ab54a"
        app:layout_constraintEnd_toEndOf="@+id/select_type_TextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/select_type_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/month_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor,TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/card_number_edittext"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:hint="@string/card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="16"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textColorHint="#878787"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/year_TextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/year_TextInputLayout"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/expiry_date_edittext"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:hint="@string/expiry_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="7"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textColorHint="#878787"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/card_number_edittext"
        app:layout_constraintTop_toBottomOf="@+id/card_number_edittext"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/cvv_edittext"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:hint="@string/cvv"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textColorHint="#878787"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/card_number_edittext"
        app:layout_constraintTop_toBottomOf="@+id/card_number_edittext"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="none"
        android:maxLength="20"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textColorHint="#878787"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/expiry_date_edittext"
        app:layout_constraintTop_toBottomOf="@+id/expiry_date_edittext"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/land_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="#3ab54a"
        app:layout_constraintBottom_toTopOf="@+id/amount_edittext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/amount_edittext" />

    <EditText
        android:id="@+id/amount_edittext"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="8"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textColorHint="#878787"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintStart_toStartOf="@+id/name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pay_now_button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/pay_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/amount_edittext"
        app:layout_constraintStart_toStartOf="@+id/amount_edittext"
        app:layout_constraintTop_toBottomOf="@+id/amount_edittext"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>